--- a/app/src/main/res/layout/devicestab_row.xml
+++ b/app/src/main/res/layout/devicestab_row.xml
@@ -1,85 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="horizontal">
-    android:focusable="false"
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
     android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+    android:minHeight="82dp"
+    android:orientation="horizontal"
+
+
+    >
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/contact_image"
+
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+
+        android:minHeight="50dp"
+        android:minWidth="50dp"
+
+        app:border_color="@color/icon_border"
+        app:border_width="2dp" />
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_weight="15"
-        android:gravity="center"
-        android:focusable="false"
-        android:id="@+id/linlayout"
-        android:descendantFocusability="blocksDescendants"   >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/label_contactName"
-            android:id="@+id/label_contactName"
-            android:layout_gravity="left"
-            android:focusable="false"
-            android:descendantFocusability="blocksDescendants"
-            android:layout_marginLeft="10dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:id="@+id/label_phone"
-            android:layout_gravity="left"
-            android:focusable="false"
-            android:descendantFocusability="blocksDescendants"
-            android:layout_marginLeft="25dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:focusable="false"
-        android:descendantFocusability="blocksDescendants"
-        android:layout_weight="1">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:id="@+id/imageView"
-            android:layout_weight="1"
-            android:focusable="false"
-            android:descendantFocusability="blocksDescendants"
-            android:src="@mipmap/ic_launcher" />
-    </LinearLayout>
-
-    <LinearLayout
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:descendantFocusability="blocksDescendants"
-        android:layout_weight="1">
+        android:paddingBottom="16dp"
+        android:paddingTop="20dp"
+        android:layout_marginRight="16dp">
 
-        <Button
-            android:width="1dp"
-            android:height="50dp"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_getCurrentPosition_label"
-            android:id="@+id/button"
-            android:layout_weight="0"
+            android:layout_weight="15">
+
+            <TextView
+                android:id="@+id/contact_label_contactName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <TextView
+                android:id="@+id/contact_label_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_margin="10dp"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:focusable="false"
-            android:descendantFocusability="blocksDescendants"
-            android:typeface="sans" />
+            android:layout_weight="1"
+            android:paddingTop="6dp">
+
+            <ImageView
+
+                android:id="@+id/contact_exclamation_mark"
+                android:src="@drawable/exclamation_mark2"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
