--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -3,4 +3,21 @@
     android:layout_height="match_parent"
     android:id="@+id/map"
     tools:context="cardexc.com.freindlocation.fragments.Map"
-    android:name="com.google.android.gms.maps.SupportMapFragment" />
+    android:name="com.google.android.gms.maps.SupportMapFragment">
+
+    <cardexc.com.freindlocation.data.CircleImageView
+        android:id="@+id/contact_map_image"
+
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+
+        android:minHeight="50dp"
+        android:minWidth="50dp"
+        android:visibility="invisible"
+        />
+
+    </fragment>
+
