--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,14 +5,24 @@
     <color name="ColorPrimaryDark">#00695C</color>
     <color name="tabsScrollColor">#004D40</color>-->
 
-    <color name="ColorPrimary">#388e3c</color>
+   <!-- <color name="ColorPrimary">#388e3c</color>
+    <color name="ColorPrimaryDark">#388e3c</color>
+    <color name="tabsScrollColor">#ffffff</color>-->
+
+    <color name="ColorPrimary">#4F948E</color>
     <color name="ColorPrimaryDark">#388e3c</color>
     <color name="tabsScrollColor">#ffffff</color>
 
 
-    <color name="ripple">#F06292</color>
-    <color name="accent">#E91E63</color>
-    <color name="accent_pressed">#C2185B</color>
+    <color name="myripple">#F06292</color>
+    <color name="myaccent">#E91E63</color>
+    <color name="myaccent_pressed">#C2185B</color>
+
+    <color name="contact_raised_button">#3399cc</color>
+
+    <color name="deep_orange">#ff6633</color>
+    <color name="green700">#339933</color>
+
 
     <!--<color name="ripple">#F06292</color>
     <color name="accent">#43a047</color>
@@ -20,4 +30,5 @@
 
 
     <color name="icon_border">#546e7a</color>
+
 </resources>
